Rubocop: Fixes all local rubocop errors

--- a/app/views/food_options/index.html.erb
+++ b/app/views/food_options/index.html.erb
@@ -24,9 +24,7 @@
           <li> <%= label %> </li>
         <% end %>
       </ul>
-
-
-
+      <p> Source: <%= recipe["recipe"]["source"] %> </p>
       <hr>
     <% end %>
   <% end %>
